[package]
name = "rockbound"
version = "1.0.0"
edition = "2021"
authors = ["Sovereign Labs"]
homepage = "https://github.com/sovereign-labs/rockbound"
repository = "https://github.com/sovereign-labs/rockbound"
description = "A low level interface transforming RocksDB into a type-oriented data store"

# Some of the code is derived from Aptos <https://github.com/aptos-labs/aptos-core>
# which is licensed under Apache-2.0.
license = "Apache-2.0"

readme = "README.md"

[dependencies]
anyhow = "1"
byteorder = { version = "1", default-features = true, optional = true }
once_cell = "1"
prometheus = { version = "0.13", optional = true }
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.4", optional = true }
rocksdb = { version = "0.21" }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
rockbound = { path = ".", features = ["test-utils"] }
tempfile = "3"

[features]
default = []

arbitrary = ["dep:proptest", "dep:proptest-derive"]
prometheus = ["dep:prometheus"]
test-utils = ["dep:byteorder"]
