[package]
name = "rockbound"
version = "1.0.0"
edition = "2021"
authors = ["Sovereign Labs"]
homepage = "https://github.com/sovereign-labs/rockbound"
repository = "https://github.com/sovereign-labs/rockbound"
description = "A low level interface transforming RocksDB into a type-oriented data store"

# Some of the code is derived from Aptos <https://github.com/aptos-labs/aptos-core>
# which is licensed under Apache-2.0.
license = "Apache-2.0"

readme = "README.md"

[dependencies]
anyhow = "1"
byteorder = { version = "1", default-features = true, optional = true }
once_cell = { version = "1", default-features = true }
prometheus = { version = "0.13", default-features = false }
proptest = { version = "1", default-features = false, features = ["std"], optional = true }
proptest-derive = { version = "0.5", default-features = false, optional = true }
rocksdb = { version = "0.22", features = ["lz4"], default-features = false }
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
rockbound = { path = ".", features = ["test-utils"] }
tempfile = "3"

[features]
default = []
arbitrary = ["dep:proptest", "dep:proptest-derive", "rockbound/arbitrary"]
test-utils = ["dep:byteorder", "arbitrary"]
